# autobahn-testsuite

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTORS  CONTRIBUTORS.md  README.md  TODO.md  autobahntestsuite.sublime-project  justfile  requirements-dev.txt
autobahntestsuite/: .gitignore  MANIFEST.in  Makefile  pyproject.toml  requirements.txt  setup.py
autobahntestsuite/autobahntestsuite/: __init__.py  _version.py  broadcast.py  caseset.py  choosereactor.py  echo.py  fuzzing.py  interfaces.py  massconnect.py  report.py  rinterfaces.py  serializer.py  spectemplate.py  testdb.py  testee.py  testrun.py  util.py  wampfuzzing.py  wamptestee.py  wamptestserver.py  wsperfcontrol.py  wsperfmaster.py  wstest.py
autobahntestsuite/autobahntestsuite/case/: __init__.py  case.py  case10_1_1.py  case12_7_x.py  case12_x_x.py  case1_1_1.py  case1_1_2.py  case1_1_3.py  case1_1_4.py  case1_1_5.py  case1_1_6.py  case1_1_7.py  case1_1_8.py  case1_2_1.py  case1_2_2.py  case1_2_3.py  case1_2_4.py  case1_2_5.py  case1_2_6.py  case1_2_7.py  case1_2_8.py  case2_1.py  case2_10.py  case2_11.py  case2_2.py  case2_3.py  case2_4.py  case2_5.py  case2_6.py  case2_7.py  case2_8.py  case2_9.py  case3_1.py  case3_2.py  case3_3.py  case3_4.py  case3_5.py  case3_6.py  case3_7.py  case4_1_1.py  (+104 more)
autobahntestsuite/autobahntestsuite/static/css/: styles.css
autobahntestsuite/autobahntestsuite/static/js/: autobahn.min.js  autobahntestsuite.js
autobahntestsuite/autobahntestsuite/templates/: base.html  index.html  testresult.html  testrun.html  wamp_details.html  wamp_details.html~  wamp_overview.html  wamp_overview.html~
autobahntestsuite/autobahntestsuite/testdata/: data1.html  data1.json  pg2229.txt
autobahntestsuite/autobahntestsuite/tests/: test_wamptestee.py
autobahntestsuite/autobahntestsuite/wampcase/: __init__.py  wampcase.py  wampcase1.py  wampcase2.py  wampcase2_2_x_x.py  wampcase2_5_x_x.py  wampcase3_1_x_x.py  wampcase_tmpl.py
autobahntestsuite/autobahntestsuite/web/broadcastserver/: index.html
autobahntestsuite/autobahntestsuite/web/echoserver/: index.html
doc/: .sconsign.dblite  (+12 more)
(+41 files in other folders)
